Update the C# extension publisher name

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "manasxx.PHPDocument", 
         "mkloubert.vscode-remote-workspace", 
         "ms-mssql.mssql", 
-        "ms-vscode.csharp", 
+        "ms-dotnettools.csharp", 
         "oderwat.indent-rainbow", 
         "Shan.code-settings-sync", 
         "SirTori.indenticator", 
